--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "core-js": "^3.6.5",
     "firebase": "^8.2.4",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.3",
-    "vue-select": "^3.11.2"
+    "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
