--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "firebase": "^8.2.4",
+    "random-words": "^1.1.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.3"
   },
